--- a/ProjectStella/ProjectStella/ProjectStella/Strings.en.resx
+++ b/ProjectStella/ProjectStella/ProjectStella/Strings.en.resx
@@ -120,8 +120,14 @@
   <data name="Back" xml:space="preserve">
     <value>Back</value>
   </data>
+  <data name="Credits" xml:space="preserve">
+    <value>Credits</value>
+  </data>
   <data name="Exit" xml:space="preserve">
     <value>Exit</value>
+  </data>
+  <data name="Help" xml:space="preserve">
+    <value>Help</value>
   </data>
   <data name="Options" xml:space="preserve">
     <value>Options</value>
