--- a/ProjectStella/ProjectStella/ProjectStella/Strings.en.resx
+++ b/ProjectStella/ProjectStella/ProjectStella/Strings.en.resx
@@ -123,6 +123,9 @@
   <data name="Credits" xml:space="preserve">
     <value>Credits</value>
   </data>
+  <data name="Default" xml:space="preserve">
+    <value>Default</value>
+  </data>
   <data name="Exit" xml:space="preserve">
     <value>Exit</value>
   </data>
@@ -140,5 +143,8 @@
   </data>
   <data name="Resume" xml:space="preserve">
     <value>Resume</value>
+  </data>
+  <data name="Southpaw" xml:space="preserve">
+    <value>Southpaw</value>
   </data>
 </root>
