--- a/ProjectStella/ProjectStella/ProjectStella/Strings.fr.resx
+++ b/ProjectStella/ProjectStella/ProjectStella/Strings.fr.resx
@@ -120,8 +120,14 @@
   <data name="Back" xml:space="preserve">
     <value>Backo</value>
   </data>
+  <data name="Credits" xml:space="preserve">
+    <value>Creditso</value>
+  </data>
   <data name="Exit" xml:space="preserve">
     <value>Exito</value>
+  </data>
+  <data name="Help" xml:space="preserve">
+    <value>Helpo</value>
   </data>
   <data name="Options" xml:space="preserve">
     <value>Optionso, Io don'to speako Frencho.</value>
